added some more test