@@ -7,6 +7,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
@@ -19,11 +20,10 @@ public class StringReplacer implements Challenge {
         //"{\"index\":\"4\",\"arrayList\":\"[pYr, g78Y, HFL, Ele, 2oPW, fQQ, XVNe, Ny9U, fix, PLjj]\",\"replacement\":\"T4C5\"}"
         ObjectMapper objectMapper = new ObjectMapper();
         StringReplaceParams param =  objectMapper.readValue(params, StringReplaceParams.class);
-        log.info(param.arrayList.toString());
-        //List<String> arrayList = new ArrayList<>(List.of(param.arrayList));
-        //log.info(arrayList.toString());
-        //arrayList.set(param.index,param.replacement);
-        //log.info(arrayList.toString());
-        return "Ok";
+
+        List<String> arrayList = Arrays.asList(param.arrayList.replace("[","").replace("]","") .split(","));
+        arrayList.set(param.index,param.replacement);
+
+        return arrayList.toString();
     }
 }
